# Vector_db_example

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: Dockerfile
src/: populate.py
