[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-database-connection-application"
version = "0.2"
requires-python = ">=3.9,<4"
authors = [
    { name = "Peter Paton", email = "abc@email.com" }
]

dependencies = [
    "psycopg2-binary"
]
